# test-task-docx-translator

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/: __init__.py
app/api/v1/: __init__.py  translates.py
app/core/: config.py
app/core/dependencies/: services.py
app/core/enums/: trasnaltes.py
app/core/schemas/: translation_api.py  translation_service.py
app/services/: translates_service.py  translation_api.py  translation_service.py
app/utils/: init_app.py
